Bug 288093 - Job title not initially drawn
Summary: Job title not initially drawn
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: notifications (other bugs)
Version First Reported In: 4.7.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2011-12-02 22:44 UTC by Jan
Modified: 2012-08-03 11:46 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.1
Sentry Crash Report:


Attachments
Job Screenshot (89.67 KB, image/png)
2011-12-02 22:44 UTC, Jan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jan 2011-12-02 22:44:35 UTC
Created attachment 66322 [details]
Job Screenshot

Version:           unspecified (using KDE 4.7.3) 
OS:                Linux

Global job titles aren't drawn once a job has begun. But once you pause and/or resume the job title is shown. Note that the job title is also drawn after it is finished.

The attached screenshot shows a recently started job on the bottom and the same job paused and then resumed on the top. As you can see the "Copying" is shown then but not after it was freshly started.

Reproducible: Always

Steps to Reproduce:
1. Start a job
2. Pause the job
3. Resume the job


Expected Results:  
The title should be drawn right after the job started.
Comment 1 Martin Koller 2012-08-02 10:17:22 UTC
confirmed with KDE/4.9 RC2
Comment 2 Martin Koller 2012-08-03 11:41:43 UTC
Git commit 6dff095c7f6aba04f3e3dc43a88f6c96ee3d25e4 by Martin Koller.
Committed on 03/08/2012 at 13:39.
Pushed by mkoller into branch 'KDE/4.9'.

Fix for: When a new job is shown in the notification applet, initially the title is unset
FIXED-IN: 4.9.1

M  +1    -0    plasma/generic/applets/notifications/ui/jobwidget.cpp

http://commits.kde.org/kde-workspace/6dff095c7f6aba04f3e3dc43a88f6c96ee3d25e4
Comment 3 Martin Koller 2012-08-03 11:46:13 UTC
Git commit 0038f850dd5cf7028dc876204088d269623b437f by Martin Koller.
Committed on 03/08/2012 at 13:39.
Pushed by mkoller into branch 'master'.

Fix for: When a new job is shown in the notification applet, initially the title is unset
FIXED-IN: 4.9.1

M  +1    -0    plasma/generic/applets/notifications/ui/jobwidget.cpp

http://commits.kde.org/kde-workspace/0038f850dd5cf7028dc876204088d269623b437f