Fix for: When a new job is shown in the notification applet, initially the title is unset

BUG: 288093
FIXED-IN: 4.9.1